--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,3 +27,9 @@ jobs:
           VALIDATE_CHECKOV: false
           VALIDATE_PYTHON_PYLINT: false
           VALIDATE_GITHUB_ACTIONS_ZIZMOR: false
+
+      - name: Run Bandit security scan
+        run: |
+          pip install bandit
+          bandit -r . -ll
+
