--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read # needed to checkout code
-      pull-requests: read # only if accessing PR info
+      contents: read
+      statuses: write
 
     steps:
       - name: Checkout code
@@ -27,4 +27,4 @@ jobs:
           VALIDATE_CHECKOV: false
           VALIDATE_PYTHON_PYLINT: false
           VALIDATE_GITHUB_ACTIONS_ZIZMOR: false
-
+          VALIDATE_YAML_PRETTIER: false
